# RAP_CRITIC_AI_by_kyvyton

./: .gitignore  README.md  album_list.txt  all_tracks.txt  need to download.rtf  pyproject.toml
evaluate/: evaluate_model.py
info_grabber/: bert_dataset.py  convert.py  create_dataset.py  grab_album.py  list_all_albums.py  new_create_dataset.py  preprocess_dataset.py  rename_albums.py  rename_tracks.py
model/: music_critic_album_model.pth  music_critic_single_model.pth
rap_critic_ai/: __init__.py  app.py
rap_critic_ai/templates/: index.html
scalers/: audio_scaler.pkl  text_scaler.pkl
singles_grabber/: check_folders.py  check_more_mp3.py  check_mp3.py  grab_lyrics_genius_by_link.py  grab_single_month.py  no_text_no_music.py  raspredel_single.py  remove_duplicates.py  singles_checker.py
training/: train_model.py  train_model_new.py
