[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rap_critic_ai"
version = "0.1.0"
description = "AI-powered rap critic app by kyvyton: web interface, neural model, and Genius integration"
authors = [
    { name = "kyvyton" }
]
requires-python = ">=3.9"

dependencies = [
        "audioread>=3.0.1,<4.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "blinker>=1.9.0,<2.0.0",
    "certifi>=2025.4.26,<2026.0.0",
    "cffi>=1.17.1,<2.0.0",
    "charset-normalizer>=3.4.2,<4.0.0",
    "click>=8.1.8,<9.0.0",
    "decorator>=5.2.1,<6.0.0",
    "filelock>=3.18.0,<4.0.0",
    "flask>=3.1.1,<4.0.0",
    "fsspec>=2025.3.2,<2026.0.0",
    "huggingface-hub>=0.31.4,<1.0.0",
    "idna>=3.10,<4.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "joblib>=1.5.0,<2.0.0",
    "lazy-loader>=0.4,<1.0.0",
    "librosa>=0.11.0,<1.0.0",
    "llvmlite>=0.43.0,<1.0.0",
    "lyricsgenius>=3.3.1,<4.0.0",
    "markupsafe>=3.0.2,<4.0.0",
    "mpmath>=1.3.0,<2.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "networkx>=3.2.1,<4.0.0",
    "numba>=0.60.0,<1.0.0",
    "numpy>=2.0.2,<3.0.0",
    "packaging>=25.0,<26.0.0",
    "platformdirs>=4.3.8,<5.0.0",
    "pooch>=1.8.2,<2.0.0",
    "pycparser>=2.22,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "regex>=2024.11.6,<2025.0.0",
    "requests>=2.32.3,<3.0.0",
    "safetensors>=0.5.3,<1.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "scipy>=1.13.1,<2.0.0",
    "setuptools>=80.7.1,<81.0.0",
    "soundfile>=0.13.1,<1.0.0",
    "soupsieve>=2.7,<3.0.0",
    "soxr>=0.5.0.post1,<1.0.0",
    "sympy>=1.14.0,<2.0.0",
    "threadpoolctl>=3.6.0,<4.0.0",
    "tokenizers>=0.21.1,<1.0.0",
    "torch>=2.7.0,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "transformers>=4.51.3,<5.0.0",
    "typing-extensions>=4.13.2,<5.0.0",
    "urllib3>=2.4.0,<3.0.0",
    "werkzeug>=3.1.3,<4.0.0"
]

[project.scripts]
app = "rap_critic_ai.app:main"
